--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -21,5 +21,6 @@
   "team.changed": "{{name}} 已加入 {{teamName}}",
   "pleaseSelect": "請選擇",
   "today": "今日",
-  "battle.currentlyNoBattle": "不好意思。 現時沒有 進行中的團體戰"
+  "battle.currentlyNoBattle": "不好意思。 現時沒有 進行中的團體戰",
+  "lastUpdated": "最後更新"
 }
