--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -22,5 +22,9 @@
   "pleaseSelect": "請選擇",
   "today": "今日",
   "battle.currentlyNoBattle": "不好意思。 現時沒有 進行中的團體戰",
-  "lastUpdated": "最後更新"
+  "lastUpdated": "最後更新",
+  "timeslot.reach": "我係現場",
+  "timeslot.15min": "15 分鐘到",
+  "timeslot.30min": "30 分鐘到",
+  "timeslot.45min": "45 分鐘到"
 }
