ask for team when join channel

--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -26,5 +26,7 @@
   "timeslot.reach": "我係現場",
   "timeslot.15min": "15 分鐘到",
   "timeslot.30min": "30 分鐘到",
-  "timeslot.45min": "45 分鐘到"
+  "timeslot.45min": "45 分鐘到",
+  "greeting": "你好!",
+  "noneOfYourBusiness": "關你咩事!"
 }
