--- a/src/translation/en-US/translation.json
+++ b/src/translation/en-US/translation.json
@@ -26,5 +26,7 @@
   "timeslot.reach": "Already there",
   "timeslot.15min": "15 MIN",
   "timeslot.30min": "30 MIN",
-  "timeslot.45min": "45 MIN"
+  "timeslot.45min": "45 MIN",
+  "greeting": "Hello!",
+  "noneOfYourBusiness": "None of your business!"
 }
