--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -21,7 +21,7 @@
   "team.changed": "{{name}} 已加入 {{teamName}}",
   "pleaseSelect": "請選擇",
   "today": "今日",
-  "battle.currentlyNoBattle": "不好意思。 現時沒有 進行中的團體戰",
+  "battle.currentlyNoBattle": "不好意思。沒有團體戰",
   "lastUpdated": "最後更新",
   "timeslot.reach": "我係現場",
   "timeslot.15min": "15 分鐘到",
