--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -29,5 +29,6 @@
   "timeslot.45min": "45 分鐘到",
   "greeting": "你好!",
   "noneOfYourBusiness": "關你咩事!",
-  "channel.type.updated": "Channel type updated."
+  "channel.type.updated": "Channel type updated.",
+  "date": "日期"
 }
