--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -27,6 +27,7 @@
   "timeslot.15min": "15 分鐘到",
   "timeslot.30min": "30 分鐘到",
   "timeslot.45min": "45 分鐘到",
+  "timeslot.reject": "我黎唔到",
   "greeting": "你好!",
   "noneOfYourBusiness": "關你咩事!",
   "channel.type.updated": "Channel type updated.",
