add illegal click fuck msg

--- a/src/translation/en-US/translation.json
+++ b/src/translation/en-US/translation.json
@@ -32,5 +32,6 @@
   "noneOfYourBusiness": "None of your business!",
   "channel.type.updated": "Channel type updated",
   "date": "Date",
-  "sync.sentTo": "You have published to"
+  "sync.sentTo": "You have published to",
+  "illegalClickWarning": "Hey! Stop doing this, otherwise we will kick you out"
 }
