--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -32,5 +32,6 @@
   "noneOfYourBusiness": "關你咩事!",
   "channel.type.updated": "Channel type updated.",
   "date": "日期",
-  "sync.sentTo": "已發佈到"
+  "sync.sentTo": "已發佈到",
+  "illegalClickWarning": "你老味! 㩒夠未? 再㩒你以後打Boss唔出TM！捉Boss一定煙！"
 }
