--- a/src/translation/zh-HK/translation.json
+++ b/src/translation/zh-HK/translation.json
@@ -34,5 +34,7 @@
   "date": "日期",
   "sync.sentTo": "已發佈到",
   "illegalClickWarning": "你老味! 㩒夠未? 再㩒你以後打Boss唔出TM！捉Boss一定煙！",
-  "map": "MAP"
+  "map": "MAP",
+  "header.updated": "Header updated",
+  "footer.updated": "Footer updated"
 }
